docs: updated readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,3 @@
-
 ---
 output: github_document
 ---
@@ -16,12 +15,13 @@ knitr::opts_chunk$set(
 
 # rlyrics
 
+
 <!-- badges: start -->
 <!-- badges: end -->
 
 The goal of rlyrics is to extract and analyze lyrics. It provides functions to download songs attribute datasets from Kaggle, extract lyrics, clean text and generate a word cloud.
 
-### Functions
+## Functions
 
 
 | Function Name | Input | Output | Description |
@@ -31,17 +31,16 @@ The goal of rlyrics is to extract and analyze lyrics. It provides functions to d
 | clean_text | `text`, `bool_contra_dict` | String |  Cleans up the `lyrics` by removing special characters, html tags, #tags, contraction words and convert everything to lower case |
 | plot_cloud | `song`, `file_path`, `max_font_size`, `max_words`, `background_color` | Image | Creates a word cloud image of most occurring words of a song/songs by an artist |
 
-
-### Installation
+## Installation
 
 You can install the development version of rlyrics from [GitHub](https://github.com/) with:
-      
+
 ``` r
 # install.packages("devtools")
 devtools::install_github("UBC-MDS/rlyrics")
 ```
 
-### Features
+## Features
 
 The rlyrics packages contains the following four functions:  
 
@@ -53,12 +52,10 @@ The rlyrics packages contains the following four functions:
 
 4. `plot_cloud()` The plot cloud function creates a word cloud of most occurring words in a song/songs by an artist.
 
-### Dependencies
-
-
-### Usage
+## Example
 
 #### Downloading and Selecting
+
 The first function in our package is the `download_data()`. Here you will input your `kaggle dataset` and the columns to be extracted into a dataframe with `columns` argument.
 
 ```{r}
@@ -66,6 +63,7 @@ The first function in our package is the `download_data()`. Here you will input 
 ```
 
 #### Extracting Lyrics
+
 The `extract_lyrics()` function gets the `song_title` and `artist` name, checks validity and availability of the combination, and extracts the lyrics for that song in a raw string format with header, footer etc which needs to be cleaned in order to create a human-readable text.  
 
 ```{r}
@@ -73,6 +71,7 @@ The `extract_lyrics()` function gets the `song_title` and `artist` name, checks 
 ```
 
 #### Cleaning
+
 The `clean_text()` function turns the raw lyrics into a human-readable text.
 
 ```{r}
@@ -80,15 +79,12 @@ The `clean_text()` function turns the raw lyrics into a human-readable text.
 ```
 
 #### Creating WordCloud
+
 WordCloud is an artistic rendering of the most frequent words in a text document. A higher occurrence for a word is translated into a larger text size. 
+
 ```{r}
 
 ```
-
-### Documentation
-
-The official documentation is hosted on Read the Docs: [Link TBC]
-
 
 ### Contributors
 
@@ -108,3 +104,4 @@ We welcome and recognize all contributions. Check out the contributing guideline
 `rlyrics` was created by Group 2. It is licensed under the terms of the MIT license.
 
 ### Credits
+
