--- a/README.Rmd
+++ b/README.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(
 
 # rlyrics
 
+
 ***Authors:*** Abhiket Gaurav, Artan Zandian, Macy Chan, Manju Abhinandana Kumar
 
 <!-- badges: start -->
@@ -64,8 +65,14 @@ The rlyrics packages contains the following four functions:
 
 The first function in our package is the `download_data()`. Here you will input your `kaggle dataset` and the columns to be extracted into a dataframe with `columns` argument.
 
-```{r}
+To use the Kaggle API, sign up for a Kaggle account at Kaggle. Then go to the 'Account' tab of your user profile (https://www.kaggle.com/<username>/account) and select 'Create API Token'. This will trigger the download of kaggle.json, a file containing your API credentials. Place this file in the location ~/.kaggle/kaggle.json. The function will automatically read your Kaggle credentials from the above path.
 
+```{r}
+library("rlyrics")
+# Example dataset: Spotify Song Attributes  
+dataset <- "geomack/spotifyclassification"
+# Extract columns 
+df <- download_data(dataset, "data", c("song_title", "artist"))
 ```
 
 #### Extracting Lyrics
@@ -73,7 +80,9 @@ The first function in our package is the `download_data()`. Here you will input 
 The `extract_lyrics()` function gets the `song_title` and `artist` name, checks validity and availability of the combination, and extracts the lyrics for that song in a raw string format with header, footer etc which needs to be cleaned in order to create a human-readable text.  
 
 ```{r}
-
+library("rlyrics")
+# extracting lyrics 
+extract_lyrics( "22", "Taylor Swift")
 ```
 
 #### Cleaning
@@ -81,15 +90,22 @@ The `extract_lyrics()` function gets the `song_title` and `artist` name, checks 
 The `clean_text()` function turns the raw lyrics into a human-readable text.
 
 ```{r}
-
+library("rlyrics")
+text <- "Early optimization is the root of all evil!"
+# Clean the extracted raw lyrics (text)
+clean_text(text)
 ```
 
 #### Creating WordCloud
 
 WordCloud is an artistic rendering of the most frequent words in a text document. A higher occurrence for a word is translated into a larger text size. 
+At this stage, we have helper functions to facilitate the extraction and cleaning of lyrics. The plot_cloud() function accepts a dataframe with artist and song_title data. It will then extract the lyrics for all songs and saves a WordCloud of the most occurring terms in the file_path provided by the user. The WordCloud parameters to be set are self-explanatory: max_font_size, max_word and background_color.
 
 ```{r}
-
+library("rlyrics")
+song <- data.frame(song_title  = c("22", "Bohemian Rhapsody"), artist = c("Taylor Swift", "Queen"))
+# plotting and saving WordCloud
+plot_cloud(song, max_font_size=1.6, max_words=100, background_color="white")
 ```
 
 ## Contributors
