--- a/README.Rmd
+++ b/README.Rmd
@@ -31,7 +31,7 @@ The goal of rlyrics is to extract and analyze lyrics. It provides functions to d
 | download_data | `dataset`, `file_path`, `columns` | Dataframe | Downloads dataset from `kaggle dataset` and extract `columns` from csv file |
 | extract_lyrics | `song_title`, `artist` | String | Extracts song lyrics of a song `song_title` by `artist` |
 | clean_text | `text`, `bool_contra_dict` | String |  Cleans up the `lyrics` by removing special characters, html tags, #tags, contraction words and convert everything to lower case |
-| plot_cloud | `song`, `file_path`, `max_font_size`, `max_words`, `background_color` | Image | Creates a word cloud image of most occurring words of a song/songs by an artist |
+| plot_cloud | `song`, `max_font_size`, `max_words`, `background_color` | Image | Creates a word cloud image of most occurring words of a song/songs by an artist |
 
 
 ## Our Package in the R Ecosystem
