--- a/README.Rmd
+++ b/README.Rmd
@@ -31,7 +31,7 @@ The goal of rlyrics is to extract and analyze lyrics. It provides functions to d
 
 | Function Name | Input | Output | Description |
 |-----------|------------|---------------|------------------|
-| download_data | `dataset`, `file_path`, `columns` | Dataframe | Downloads dataset from `kaggle dataset` and extract `columns` from csv file |
+| download_data | `dataset`, `columns` | Dataframe | Downloads dataset from `kaggle dataset` and extract `columns` from csv file |
 | extract_lyrics | `song_title`, `artist` | String | Extracts song lyrics of a song `song_title` by `artist` |
 | clean_text | `text`, `bool_contra_dict` | String |  Cleans up the `lyrics` by removing special characters, html tags, #tags, contraction words and convert everything to lower case |
 | plot_cloud | `song`, `max_font_size`, `max_words`, `background_color` | Image | Creates a word cloud image of most occurring words of a song/songs by an artist |
@@ -75,7 +75,7 @@ library("rlyrics")
 # Example dataset: Spotify Song Attributes  
 dataset <- "geomack/spotifyclassification"
 # Extract columns 
-df <- download_data(dataset, "data", c("song_title", "artist"))
+df <- download_data(dataset, c("song_title", "artist"))
 ```
 
 #### Extracting Lyrics
