--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,7 @@ A R package to extract and analyze lyrics
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/UBC-MDS/rlyrics/workflows/R-CMD-check/badge.svg)](https://github.com/UBC-MDS/rlyrics/actions)
+[![codecov](https://codecov.io/gh/UBC-MDS/rlyrics/branch/master/graph/badge.svg?token=5JHKJfpMQ5)](https://codecov.io/gh/UBC-MDS/rlyrics)
 <!-- badges: end -->
 
 ## Overview
