--- a/README.Rmd
+++ b/README.Rmd
@@ -88,6 +88,14 @@ library("rlyrics")
 extract_lyrics( "22", "Taylor Swift")
 ```
 
+```{r extract-lyrics-example, eval = FALSE, echo = FALSE, fig.width=7, fig.height=4, eval=FALSE}
+lyrics
+```
+
+```{r, echo=FALSE, out.width="60%"}
+knitr::include_graphics("../man/figures/lyrics.png")
+```
+
 #### Cleaning
 
 The `clean_text()` function turns the raw lyrics into a human-readable text.
@@ -97,6 +105,14 @@ library("rlyrics")
 text <- "Early optimization is the root of all evil!"
 # Clean the extracted raw lyrics (text)
 clean_text(text)
+```
+
+```{r clean-text-example, eval = FALSE, echo = FALSE, fig.width=7, fig.height=4}
+clean_text
+```
+
+```{r, echo=FALSE, out.width="60%"}
+knitr::include_graphics("../man/figures/clean_text.png")
 ```
 
 #### Creating WordCloud
@@ -109,6 +125,14 @@ library("rlyrics")
 song <- data.frame(song_title  = c("22", "Bohemian Rhapsody"), artist = c("Taylor Swift", "Queen"))
 # plotting and saving WordCloud
 plot_cloud(song, max_font_size=1.6, max_words=100, background_color="white")
+```
+
+```{r word-cloud-example,eval = FALSE, echo = FALSE, fig.width=7, fig.height=4, eval=FALSE}
+word_cloud
+```
+
+```{r ,echo=FALSE, out.width="60%"}
+knitr::include_graphics("../man/figures/wordcloud.png")
 ```
 
 ## Contributors
