--- a/vignettes/Intro_to_rlyrics.Rmd
+++ b/vignettes/Intro_to_rlyrics.Rmd
@@ -21,7 +21,7 @@ This document introduces you to the **rlyrics** package and all the functions in
 
 *To get access to the Kaggle API, sign up for a Kaggle account at Kaggle. Then go to the 'Account' tab of your user profile (https://www.kaggle.com/<username\>/account) and select 'Create API Token'. This will trigger the download of kaggle.json, a file containing your API credentials. Place this file in the location **\~/.kaggle/kaggle.json**. The function will automatically read your Kaggle credentials from the above path.*
 
-For more information about API call limits and API care recommendations please visit the [Kaggle API](https://github.com/Kaggle/kaggle-api).
+For more information about API call limits and API care recommendations please visit the [Kaggle API](https://github.com/Kaggle/kaggle-api) or [Official Kaggle API documentation](https://www.kaggle.com/docs/api).
 
 
 # Overview
